3) Développer la route POST /games : **/!\ La console du jeu ne sera pas créée dans cette route. Il faut que la console existe déjà.**
    4) Développer la route PATCH /games/{id}
4)
    1) Développer le modèle Review
    2) Développer le DTO Review
    3) Développer la route GET /reviews
    4) Développer la route GET /reviews/{id}
    5) Développer la route POST /reviews : **/!\ Le jeu de la review ne sera pas créé dans cette route. Il faut que le jeu existe déjà.**
    6) Développer la route PATCH /reviews/{id}

Début question 5.1
